# sg_condo_bot

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-29-florence-agent.md
docs/superpowers/specs/: 2026-04-29-florence-agent-design.md
src/florence_agent/: app.py  cli.py  pairing.py  render.py  template.html
src/florence_agent/fetchers/: __init__.py  csv_source.py  edgeprop.py  squarefoot.py  ura.py
src/sg_condo_agent/: app.py  cli.py  condos.py  models.py  render.py  template.html
src/sg_condo_agent/fetchers/: __init__.py  csv_source.py  edgeprop.py  har.py  squarefoot.py  ura.py
tests/: test_cli_smoke.py  test_condos.py  test_csv_source.py  test_edgeprop.py  test_har.py  test_models.py  test_pairing.py  test_render.py  test_squarefoot.py  test_ura.py
tests/fixtures/: parktown_partial.har  parktown_sample.har  sample_ura.csv  squarefoot_florence.html
