[project]
name = "sg-condo-agent"
version = "0.2.0"
description = "Singapore condo transaction explorer — pulls from EdgeProp / URA / SquareFoot / CSV and emits a profit/loss report"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "gradio>=6.0",
  "pandas>=2.0",
  "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sg-condo-agent = "sg_condo_agent.cli:main"
sg-condo-share = "sg_condo_agent.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sg_condo_agent = ["template.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
